# wpycounts

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: main.py
src/wpycounts/: __init__.py  datasets.py  plotting.py  wpycounts.py
tests/: test_wpycounts.py
