[tool.poetry]
name = "wpycounts"
version = "0.1.0"
description = "Count the number of words in a text file!"
authors = ["Wesllen Sousa"]
license = "MIT"
readme = "README.md"
include = ["tests/*", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
python-semantic-release = "^9.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
